--- a/Trees_with_Base_Functions_v2.tex
+++ b/Trees_with_Base_Functions_v2.tex
@@ -125,10 +125,10 @@ Economía y la Empresa, 30100 Murcia, Murcia, España}
   computational overhead compared to conventional trees. Furthermore, this
   also means that IBFs can be used in any extensions of the Decision Tree
   algorithm, such as evolutionary trees, boosting, and bagging. We conduct
-  a benchmarking exercise to show how the use of IBFs can often improve
-  the performance of models. In addition, we present three empirical
-  applications that illustrate the approach in classification and
-  regression. As part of discussing the empirical applications, we
+  a benchmarking exercise to understand under which conditions the use of
+  IBFs can improve model the performance. In addition, we present three
+  empirical applications that illustrate the approach in classification
+  and regression. As part of discussing the empirical applications, we
   introduce a device called \emph{decision charts} to facilitate the
   interpretation of DTs with IBFs. Finally, we conclude the paper by
   outlining some directions for future research.
@@ -750,7 +750,9 @@ can be seen that random forests outperform evolutionary trees, which in
 turn outperform conventional trees. This is as anticipated. Further, for
 the same algorithm, the use of IBF increases the average accuracy
 slightly, and provides similar results in terms of kappa and the mean
-tree size.
+tree size. The experiments were conducted using a parallel
+implementation of the code, using 4 Intel i7-6600U cores clocked at 2.60
+GHz.
 
 \begin{table}
 
